--- a/filmes/estilo.css
+++ b/filmes/estilo.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins';
 }
 
 header {
@@ -143,4 +146,25 @@ button:hover {
     .form-container {
         padding: 30px 20px;
     }
+}
+
+.container{
+    width: 900px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.container h2{
+    width: 100%;
+}
+
+.container img{
+    width: 300px;
+    margin: 10px 300px;
+}
+
+.container p{
+    margin: 0 50px;
 }
